# ransac_lines_fitting_gpu

./: CMakeLists.txt  README.md
data/: sample_2d.pcd  sample_3d.pcd
examples/: 2DLinesFittingApp.cpp  3DLinesFittingApp.cpp  CMakeLists.txt
include/lines_fitting/: LineSegment.hpp  LinesFitting.hpp  lines_fitting.hpp
include/lines_fitting/utils/: PerceptionUtility.hpp  Timer.hpp  utils.hpp
src/: CMakeLists.txt  LinesFitting.cpp
src/cuda/: BasicUtility.hpp  CMakeLists.txt  LinesFittingInterface.cpp  LinesFittingInterface.hpp  PointTypes.hpp  SACModel.cpp  SACModel.hpp
